nginx-deployment-version2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-v2
  labels:
    app: nginx
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      version: v2
  template:
    metadata:
      labels:
        app: nginx
        version: v2
    spec:
      containers:
      - name: nginx
        image: rahulnik25/nginx:v2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
