nginx-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
spec:
  hosts:
    - nginx
  http:
    - route:
        - destination:
            host: nginx
            subset: v1
          weight: 50
        - destination:
            host: nginx
            subset: v2
          weight: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx
spec:
  host: nginx
  subsets:
    - name: v1
      labels:
        app: nginx
        version: v1
    - name: v2
      labels:
        app: nginx
        version: v2
